Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- search result list can be sorted (cf getDirectoryResultFields)
Bug fixes:
~~~~~~~~~~
- no widget help available on creation form
- Better error message in LocalDirectory if the home folder is missing.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-